--- a/package.json
+++ b/package.json
@@ -24,12 +24,20 @@
   },
   "homepage": "https://github.com/hoday/EngineeringPortfolio#readme",
   "devDependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-compress": "^1.4.3",
     "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-less": "^1.4.1",
+    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-wp-i18n": "^1.0.1"
+    "grunt-exec": "^3.0.0",
+    "grunt-newer": "^1.3.0",
+    "grunt-wp-i18n": "^1.0.1",
+    "grunt-zip": "^0.17.1",
+    "jquery": "^3.3.1"
   }
 }
